--- a/research/04_model_trainer.ipynb
+++ b/research/04_model_trainer.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\End-to-end-Machine-Learning-Project-with-MLflow\\\\research'"
+       "'c:\\\\Users\\\\ADMIN\\\\Documents\\\\Data Analytics\\\\Machine Learning\\\\ML Projects\\\\End_End_Project_With_MLFlow\\\\research'"
       ]
      },
      "execution_count": 2,
@@ -46,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\End-to-end-Machine-Learning-Project-with-MLflow'"
+       "'c:\\\\Users\\\\ADMIN\\\\Documents\\\\Data Analytics\\\\Machine Learning\\\\ML Projects\\\\End_End_Project_With_MLFlow'"
       ]
      },
      "execution_count": 4,
@@ -181,11 +181,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-07-11 20:13:53,258: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2023-07-11 20:13:53,265: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2023-07-11 20:13:53,268: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2023-07-11 20:13:53,269: INFO: common: created directory at: artifacts]\n",
-      "[2023-07-11 20:13:53,270: INFO: common: created directory at: artifacts/model_trainer]\n"
+      "[2024-07-17 15:22:09,289: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-07-17 15:22:09,293: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-07-17 15:22:09,299: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2024-07-17 15:22:09,301: INFO: common: created directory at: artifacts]\n",
+      "[2024-07-17 15:22:09,303: INFO: common: created directory at: artifacts/model_trainer]\n"
      ]
     }
    ],
@@ -223,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4
  },
