added prediction pipeline and CI/CD Workflow

--- a/research/05_model_evaluation.ipynb
+++ b/research/05_model_evaluation.ipynb
@@ -373,19 +373,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-07-17 16:17:12,342: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-07-17 16:17:12,346: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-07-17 16:17:12,352: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2024-07-17 16:17:12,355: INFO: common: created directory at: artifacts]\n",
-      "[2024-07-17 16:17:12,356: INFO: common: created directory at: artifacts/model_evaluation]\n",
-      "[2024-07-17 16:17:12,782: INFO: common: json file saved at: artifacts\\model_evaluation\\metrics.json]\n"
+      "[2024-07-17 16:26:31,649: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-07-17 16:26:31,652: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-07-17 16:26:31,657: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2024-07-17 16:26:31,660: INFO: common: created directory at: artifacts]\n",
+      "[2024-07-17 16:26:31,663: INFO: common: created directory at: artifacts/model_evaluation]\n",
+      "[2024-07-17 16:26:50,870: WARNING: connectionpool: Retrying (Retry(total=4, connect=5, read=4, redirect=5, status=5)) after connection broken by 'RemoteDisconnected('Remote end closed connection without response')': /changach_dennis/End_End_Project_With_MLFlow.mlflow/api/2.0/mlflow/runs/create]\n",
+      "[2024-07-17 16:26:51,306: INFO: common: json file saved at: artifacts\\model_evaluation\\metrics.json]\n"
      ]
     },
     {
@@ -393,8 +394,8 @@
      "output_type": "stream",
      "text": [
       "Registered model 'ElasticnetModel' already exists. Creating a new version of this model...\n",
-      "2024/07/17 16:17:22 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: ElasticnetModel, version 2\n",
-      "Created version '2' of model 'ElasticnetModel'.\n"
+      "2024/07/17 16:27:01 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: ElasticnetModel, version 3\n",
+      "Created version '3' of model 'ElasticnetModel'.\n"
      ]
     }
    ],
